--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcc 'PR'
 - !lcsh 'Fiction'
 - !lcsh 'Adventure stories'
+- GITenberg
 title: 'In Strange Company: A Story of Chili and the Southern Seas'
 url: http://www.gutenberg.org/ebooks/37081
